--- a/apache-install/templates/index.html.j2
+++ b/apache-install/templates/index.html.j2
@@ -1,6 +1,7 @@
 # This is the index.html file. As it can be seen, there are some variables that will be substituted when ansible going to
 # be deployed. After launching the playbok, always the first task that running is the "facts" where all information gathered
-# from the servers which we want to manage remotely. At the end of filename, the extension indicate that is a jinja2 file.
+# from the servers which we want to manage remotely. That is where the first two vars coming from actually. At the end of 
+# filename, the extension indicate that is a jinja2 file.
 
 <html>
 <center>
